--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/jetstream": "^3.3",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^2.11",
+        "laravel/ui": "^4.2",
+        "livewire/livewire": "^2.0",
         "realrashid/sweet-alert": "^7.1",
         "stripe/stripe-php": "^12.0"
     },
